2010-01-31  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/export.c:
   Close meta tag for export date properly.


2010-01-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.spec.in:
   Update RPM Spec file (patch by Dominic Hopf, thanks).


2010-01-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h:
   Fix renaming sci_send_message(), sci_send_command() function pointers.


2010-01-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c, src/highlighting.h, src/sciwrappers.c,
   src/plugindata.h, doc/Doxyfile.in, doc/pluginsymbols.c,
   plugins/geanyfunctions.h, plugins/Makefile.am,
   plugins/pluginmacros.h, plugins/genapi.py, ChangeLog, wscript:
   Use full function name for GeanyFunctions function pointers. This
   avoids naming conflicts e.g. with C++'s 'new' keyword.
   Remove deprecated header pluginmacros.h - use geanyfunctions.h instead.


2010-01-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/utils.c, src/utils.h, src/vte.c:
   Add utils_copy_environment() and make use of it.
 * data/snippets.conf, doc/geany.html, doc/geany.txt, src/callbacks.c,
   src/editor.c, src/templates.c, src/templates.h:
   Add new special template wildcard "{command:...}" to use the
   output of a command in templates.
   Adjust template functions to mostly work with GeanyDocuments.
   Minor cleanups in the template code.
 * src/gb.c:
   Replace the old icons with smiley icons from the Rodent icon theme.
   Fix showing the same icon for two or more slots.
   Minor cleanups.
 * src/editor.c, src/editor.h, src/keybindings.c:
   Rename fold_symbol_click() to editor_toggle_fold().
   Use editor_toggle_fold() when the 'Toggle current fold' keybinding
   was used to respect the 'Fold/unfold all children' preference
   (closes #2935053).


2010-01-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c:
   Prevent possible segfault in get_build_group().