@@ -1,3 +1,13 @@
+2010-01-31  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * icons/Makefile.am:
+   Include geany.ico in the distribution tarball.
+ * Makefile.am:
+   Fix 'make distcheck' by removing data/latex.tags from EXTRA_DIST.
+ * scripts/create_py_tags.py:
+   Make the script a bit more robust with newer Python versions.
+
+
 2010-01-31  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * plugins/export.c:
